# sip4

./: .hg_archival.txt  .hgtags  Makefile  build_mac.sh  build_package.sh  configure.py  installed.txt  sipconfig.py
.github/workflows/: python-publish.yml
python_package/: .gitignore  MANIFEST.in  pyproject.toml  setup.py
python_package/PyQt5/: siplib
python_package/PyQt5/sip4.egg-info/: PKG-INFO  SOURCES.txt
python_package/sip4.egg-info/: SOURCES.txt  top_level.txt
sipgen/: Makefile  lexer.c  parser.c  parser.h  sip  sip.h
siplib/: Makefile  sip.h
